# odoo-cli

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/skills/run-odoo-cli/: SKILL.md
src/odoo_cli/: __init__.py  client.py  config.py  exceptions.py  render.py
src/odoo_cli/cli/: __init__.py  _errors.py  config_cmd.py  crm.py  main.py  users.py
src/odoo_cli/resources/: __init__.py  base.py  crm_lead.py  res_users.py
tests/: conftest.py  test_cli_crm.py  test_client.py  test_crm_lead.py  test_live.py  test_render.py  test_res_users.py
