[project]
name = "odoo-cli"
version = "0.1.0"
description = "A human-friendly CLI for driving an Odoo 19 database over the External JSON-2 API."
readme = "README.md"
authors = [
    { name = "adamsulik", email = "sulik.adam@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.7",
    "keyring>=25.0",
]

[project.scripts]
oc = "odoo_cli.cli.main:run"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pre-commit>=4.6.0",
    "commitizen>=4.16.3",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
